overflow images fixed

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -294,6 +294,7 @@ $bar-spacing: 8px;
 
 .mainBody{
 	background: white;
+	padding-top: 80px;
 }
 
 .instaPosts{
@@ -322,8 +323,9 @@ $bar-spacing: 8px;
 	margin-top: 25px;
 	margin-bottom: 25px;
 	height: 300px;
-	background: #E6E6E6;
-	// overflow: hidden;
+	background: #292F36;
+	border-radius: 10px;
+	overflow: hidden;
 	img{
 		height: 100%;
 	}
@@ -367,8 +369,8 @@ $bar-spacing: 8px;
 	height: 300px;
 	margin: 0px auto;
 	display: block;
-	background: #E6E6E6;
-
+	background: #292F36;
+	cursor: pointer;
 }
 
 .formAddAlbum{
@@ -383,7 +385,7 @@ $bar-spacing: 8px;
 
 
 .singleImagePage{
-	margin-top: 100px;
+	// margin-top: 100px;
 	border-top: 1px solid #E6E6E6;
 	padding-top: 20px;
 }
@@ -418,6 +420,11 @@ $bar-spacing: 8px;
 		font-size: 14px;
 		display: inline-block;
 	}
+
+
+.homeLine{
+	border-top: 1px solid #E6E6E6;
+}
 
 
 
